tests/baselines/reference/subtypingWithNumericIndexer4.errors.txt
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithNumericIndexer4.ts(11,7): error TS2415: Class 'B' incorrectly extends base class 'A'.
  Index signatures are incompatible.
    Type 'string' is not assignable to type 'Derived'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithNumericIndexer4.ts(20,11): error TS2415: Class 'B' incorrectly extends base class 'A<Base>'.
  Index signatures are incompatible.
    Type 'string' is not assignable to type 'Base'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithNumericIndexer4.ts(20,23): error TS2344: Type 'Base' does not satisfy the constraint 'Derived'.
  Property 'bar' is missing in type 'Base'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithNumericIndexer4.ts(24,11): error TS2415: Class 'B3<T>' incorrectly extends base class 'A<T>'.
  Index signatures are incompatible.
    Type 'string' is not assignable to type 'T'.


==== tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithNumericIndexer4.ts (4 errors) ====
    // Derived type indexer must be subtype of base type indexer
    
    interface Base { foo: string; }
    interface Derived extends Base { bar: string; }
    interface Derived2 extends Derived { baz: string; }
    
    class A {
        [x: number]: Derived;
    }
    
    class B extends A {
          ~
!!! error TS2415: Class 'B' incorrectly extends base class 'A'.
!!! error TS2415:   Index signatures are incompatible.
!!! error TS2415:     Type 'string' is not assignable to type 'Derived'.
        [x: number]: string; // error
    }
    
    module Generics {
        class A<T extends Derived> {
            [x: number]: T;
        }
    
        class B extends A<Base> {
              ~
!!! error TS2415: Class 'B' incorrectly extends base class 'A<Base>'.
!!! error TS2415:   Index signatures are incompatible.
!!! error TS2415:     Type 'string' is not assignable to type 'Base'.
                          ~~~~
!!! error TS2344: Type 'Base' does not satisfy the constraint 'Derived'.
!!! error TS2344:   Property 'bar' is missing in type 'Base'.
            [x: number]: string; // error
        }
    
        class B3<T extends Derived> extends A<T> {
              ~~
!!! error TS2415: Class 'B3<T>' incorrectly extends base class 'A<T>'.
!!! error TS2415:   Index signatures are incompatible.
!!! error TS2415:     Type 'string' is not assignable to type 'T'.
            [x: number]: string; // error
        }
    }